--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>1 Varun</p>
-    <p>2. GDG   Chennai</p>
+    <p>2 GDG   Chennai</p>
     <p>3. C Abdul hakeem clg of Eng and Tech</p>
     <p>4. saniya </p>
 </body>
